adcionando autenticaçao nos meus testes
