# controller/transferController.js
@@ -1,8 +1,11 @@
 const express = require('express');
 const router = express.Router();
 const transferService = require('../service/transferService');
+const authenticateToken = require('../middleware/authMiddleware');
 
-router.post('/', (req, res) => {
+
+// Protegido por JWT
+router.post('/', authenticateToken, (req, res) => {
   const { from, to, value } = req.body;
   if (!from || !to || typeof value !== 'number') return res.status(400).json({ error: 'Campos obrigatórios: from, to, value' });
   try {
@@ -13,7 +16,9 @@ router.post('/', (req, res) => {
   }
 });
 
-router.get('/', (req, res) => {
+
+// Protegido por JWT
+router.get('/', authenticateToken, (req, res) => {
   res.json(transferService.listTransfers());
 });
 
