# swagger.json
@@ -5,6 +5,18 @@
     "version": "1.0.0",
     "description": "API para registro, login, consulta de usuários e transferências."
   },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  },
+  "security": [
+    { "bearerAuth": [] }
+  ],
   "paths": {
     "/users/register": {
       "post": {
@@ -66,6 +78,7 @@
     "/transfers": {
       "post": {
         "summary": "Realizar transferência",
+        "security": [{ "bearerAuth": [] }],
         "requestBody": {
           "required": true,
           "content": {
@@ -84,13 +97,18 @@
         },
         "responses": {
           "201": { "description": "Transferência realizada" },
-          "400": { "description": "Erro de validação" }
+          "400": { "description": "Erro de validação" },
+          "401": { "description": "Token não fornecido" },
+          "403": { "description": "Token inválido" }
         }
       },
       "get": {
         "summary": "Listar transferências",
+        "security": [{ "bearerAuth": [] }],
         "responses": {
-          "200": { "description": "Lista de transferências" }
+          "200": { "description": "Lista de transferências" },
+          "401": { "description": "Token não fornecido" },
+          "403": { "description": "Token inválido" }
         }
       }
     }
